chore: migrate to esbuild away from vite

--- a/wip/web-player/index.html
+++ b/wip/web-player/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="data:,">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-FLV Web Player</title>
 </head>
@@ -11,6 +11,6 @@
   <video id="videoElement" controls width="640" height="360" crossorigin="anonymous" preload="metadata"></video>
   <h1>Hello, world!</h1>
   <!-- Vite injects the script here -->
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="./dist/bundle.js"></script>
 </body>
 </html>
