--- a/wip/web-player/index.html
+++ b/wip/web-player/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <text>E-FLV Web Player</text><hr>
-  <video id="videoElement" controls width="640" height="360" crossorigin="anonymous" preload="metadata"></video><hr>
+  <video id="videoElement" controls width="640" height="360" crossorigin="anonymous" preload="metadata"></video>
   <!-- Vite injects the script here -->
   <script type="module" src="./dist/bundle.js"></script>
 </body>
