fix: update title in demo-app.html and modify serve script in package.json to run demo-app.html

--- a/e-rtmp-lab/wip/e-flv-js/demo-app.html
+++ b/e-rtmp-lab/wip/e-flv-js/demo-app.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="data:,">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-FLV Web Player</title>
+  <title>E-FLV Demo App</title>
 </head>
 <body>
   <div id="app"></div>
