build(e-flv-js): rename build output from bundle.js to e-flv-demo.js

--- a/e-rtmp-lab/wip/e-flv-js/demo-app.html
+++ b/e-rtmp-lab/wip/e-flv-js/demo-app.html
@@ -9,6 +9,6 @@
 <body>
   <div id="app"></div>
   <video id="videoElement" controls width="640" height="360" crossorigin="anonymous" preload="metadata"></video>
-  <script type="module" src="./dist/bundle.js"></script>
+  <script type="module" src="./dist/e-flv-demo.js"></script>
 </body>
 </html>
